Some suggested lints